--- a/style.css
+++ b/style.css
@@ -52,12 +52,6 @@ body {
   align-items: flex-end;
 }
 
-.top-right .logo-small {
-  height: auto;
-  width: 80px; /* Adjust size of top-right logo */
-  margin-bottom: 10px;
-}
-
 .top-right .nav-buttons a {
   display: block;
   padding: 8px 16px;
@@ -148,7 +142,7 @@ body {
   background-size: 60%;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 .hero-left .social-icons .icon.instagram {
@@ -156,7 +150,7 @@ body {
   background-size: 60%;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -165,7 +159,7 @@ body {
   background-size: 60%;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 .hero-left .social-icons .icon.telegram {
@@ -173,7 +167,7 @@ body {
   background-size: 60%;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 .hero-right {
