--- a/style.css
+++ b/style.css
@@ -226,3 +226,30 @@ body {
   width: 25px;
   margin-left: 5px;
 }
+.landing-page {
+  position: relative; /* Add this to create a stacking context */
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background: #2F303A;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  z-index: 1; /* Ensure it's above the background-blur */
+}
+
+.background-blur {
+  position: fixed; /* Keep it fixed to cover the viewport */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('assets/bg.png');
+  background-size: cover;
+  background-position: center;
+  mix-blend-mode: lighten;
+  filter: blur(5px) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  z-index: -1; /* Keep it behind other content */
+}
