--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
   font-size: 48px;
   line-height: 1;
   font-weight: 600;
-  color: #FFFFFF;
+  color: #F52929;
   margin-bottom: 5px;
 }
 
