--- a/auth.css
+++ b/auth.css
@@ -78,11 +78,15 @@ body {
   background-color: white;
 }
 
-form {
+.form {
   display: flex;
   flex-direction: column;
   width: 100%;
   max-width: 400px;
+}
+
+.hidden {
+  display: none;
 }
 
 form input {
