--- a/auth.css
+++ b/auth.css
@@ -57,7 +57,7 @@ body {
 .toggle-buttons {
   display: flex;
   width: 300px;
-  background-color: #eee;
+  background-color: #F52929;
   border-radius: 20px;
   overflow: hidden;
   margin-bottom: 30px;
@@ -71,11 +71,11 @@ body {
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 
 .toggle-buttons .active {
-  background-color: white;
+  background-color: rgb(222, 0, 0);
 }
 
 .form {
