--- a/about.css
+++ b/about.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Poppins', sans-serif;
     background: url('assets/bg2.jpg') no-repeat center center fixed;
     background-size: cover;
-    color: #FFFFFF;
+    color: #30323a;
     overflow: hidden;
 }
 
